--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="demo"></div>
 
   <div class="setup-open">
-    <img src="./img/user-1.jpg" class="setup-open-icon">
+    <img src="./img/user-1.jpg" class="setup-open-icon" tabindex="0">
   </div>
 </header>
 
@@ -73,11 +73,11 @@
       <div class="setup-user">
         <img class="setup-user-pic" src="./img/user-1.jpg"/>
         <label>
-          <input type="text" class="setup-user-name" value="Синий Пендальф"/>
+          <input type="text" class="setup-user-name" value="Синий Пендальф" required maxlength="50"/>
         </label>
       </div>
 
-      <span class="setup-close">&times;</span>
+      <span class="setup-close" tabindex="0">&times;</span>
     </div>
 
 
@@ -101,7 +101,7 @@
             <g class="wizard">
               <use xlink:href="#wizard-coat"  class="wizard-coat" style="fill: #6589a4"></use>
               <use xlink:href="#wizard-head"  class="wizard-head"></use>
-              <use xlink:href="#wizard-eyes"  class="wizard-eyes"></use>
+              <use xlink:href="#wizard-eyes"  class="wizard-eyes" ></use>
               <use xlink:href="#wizard-hands" class="wizard-hands"></use>
             </g>
           </svg>
