--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
 
 
     <div class="setup-artifacts-shop">
-      <div class="setup-artifacts-cell"><img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true">
+      <div class="setup-artifacts-cell" draggable="true"><img src="img/icon-star.png" alt="Star" width="65" height="50" draggable="true">
       </div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
+      <div class="setup-artifacts-cell" draggable="true"></div>
+      <div class="setup-artifacts-cell" draggable="true"></div>
+      <div class="setup-artifacts-cell" draggable="true"></div>
 
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
-      <div class="setup-artifacts-cell"></div>
+      <div class="setup-artifacts-cell" draggable="true"></div>
+      <div class="setup-artifacts-cell" draggable="true"></div>
+      <div class="setup-artifacts-cell" draggable="true"></div>
+      <div class="setup-artifacts-cell" draggable="true"></div>
     </div>
 
     <div class="setup-player">
@@ -186,6 +186,7 @@
   };
 </script>
 <script src="js/setup.js"></script>
+<script src="js/dialog.js"></script>
 <script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 </body>
